lib/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = function(pretext, tags, posttext) {
            var val = [];
            if (pretext.length > 0) {val.push(pretext);}
            tags.forEach(function(tag){
              val.push(tag[0]);
            })
            if (posttext.length > 0) {val.push(posttext);}
            return val;
          },
        peg$c3 = "<",
        peg$c4 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c5 = void 0,
        peg$c6 = /^[^\/]/,
        peg$c7 = { type: "class", value: "[^\\/]", description: "[^\\/]" },
        peg$c8 = /^[^ >]/,
        peg$c9 = { type: "class", value: "[^ >]", description: "[^ >]" },
        peg$c10 = ">",
        peg$c11 = { type: "literal", value: ">", description: "\">\"" },
        peg$c12 = function(tagName, attrs, content, closeTagName) {
            var node = {};
            tagName = tagName.join('').trim();
            if (tagName !== closeTagName) { throw new g._Error('Mismatched Open & Close Tags', null, null, null, g._lineNumber(), g._columnNumber()); }
            node.tag = tagName;
            if (attrs) {
              node.attributes = attrs;
            }
            if (content) {
              if (content instanceof Array) {
                node.children = content;
              } else {
                node.children = [content];
              }
            }
            return node;
          },
        peg$c13 = function(tagName, attrs, content) {
            throw new g._Error('Invalid Empty Tag', null, null, null, g._lineNumber(), g._columnNumber());
          },
        peg$c14 = "<!",
        peg$c15 = { type: "literal", value: "<!", description: "\"<!\"" },
        peg$c16 = /^[^\-]/,
        peg$c17 = { type: "class", value: "[^\\-]", description: "[^\\-]" },
        peg$c18 = /^[^>]/,
        peg$c19 = { type: "class", value: "[^>]", description: "[^>]" },
        peg$c20 = function(DOCTYPER) {return "<!" + DOCTYPER.join('') + ">";},
        peg$c21 = { type: "other", description: "TagClose" },
        peg$c22 = "</",
        peg$c23 = { type: "literal", value: "</", description: "\"</\"" },
        peg$c24 = function(tagCloseName) {return tagCloseName.join('').trim();},
        peg$c25 = /^[^ \/>]/,
        peg$c26 = { type: "class", value: "[^ \\/>]", description: "[^ \\/>]" },
        peg$c27 = "/>",
        peg$c28 = { type: "literal", value: "/>", description: "\"/>\"" },
        peg$c29 = function(tagName, attrs) {
            var node = {};
            node.tag = tagName.join('').trim();
            if (attrs) {
              node.attributes = attrs;
            }
            return node;
          },
        peg$c30 = function(tagName, attrs) {
            var node = {};
            node.tag = tagName;
            if (attrs) {
              node.attributes = attrs;
            }
            return node;
          },
        peg$c31 = "br",
        peg$c32 = { type: "literal", value: "br", description: "\"br\"" },
        peg$c33 = "hr",
        peg$c34 = { type: "literal", value: "hr", description: "\"hr\"" },
        peg$c35 = "meta",
        peg$c36 = { type: "literal", value: "meta", description: "\"meta\"" },
        peg$c37 = "link",
        peg$c38 = { type: "literal", value: "link", description: "\"link\"" },
        peg$c39 = "base",
        peg$c40 = { type: "literal", value: "base", description: "\"base\"" },
        peg$c41 = "img",
        peg$c42 = { type: "literal", value: "img", description: "\"img\"" },
        peg$c43 = "embed",
        peg$c44 = { type: "literal", value: "embed", description: "\"embed\"" },
        peg$c45 = "param",
        peg$c46 = { type: "literal", value: "param", description: "\"param\"" },
        peg$c47 = "area",
        peg$c48 = { type: "literal", value: "area", description: "\"area\"" },
        peg$c49 = "col",
        peg$c50 = { type: "literal", value: "col", description: "\"col\"" },
        peg$c51 = "input",
        peg$c52 = { type: "literal", value: "input", description: "\"input\"" },
        peg$c53 = "BR",
        peg$c54 = { type: "literal", value: "BR", description: "\"BR\"" },
        peg$c55 = "HR",
        peg$c56 = { type: "literal", value: "HR", description: "\"HR\"" },
        peg$c57 = "META",
        peg$c58 = { type: "literal", value: "META", description: "\"META\"" },
        peg$c59 = "LINK",
        peg$c60 = { type: "literal", value: "LINK", description: "\"LINK\"" },
        peg$c61 = "BASE",
        peg$c62 = { type: "literal", value: "BASE", description: "\"BASE\"" },
        peg$c63 = "IMG",
        peg$c64 = { type: "literal", value: "IMG", description: "\"IMG\"" },
        peg$c65 = "EMBED",
        peg$c66 = { type: "literal", value: "EMBED", description: "\"EMBED\"" },
        peg$c67 = "PARAM",
        peg$c68 = { type: "literal", value: "PARAM", description: "\"PARAM\"" },
        peg$c69 = "AREA",
        peg$c70 = { type: "literal", value: "AREA", description: "\"AREA\"" },
        peg$c71 = "COL",
        peg$c72 = { type: "literal", value: "COL", description: "\"COL\"" },
        peg$c73 = "INPUT",
        peg$c74 = { type: "literal", value: "INPUT", description: "\"INPUT\"" },
        peg$c75 = function(c1, c2) {
            var content = [];
            //c1 = c1.join('');
            if (c1.length > 0) {content.push(c1);}
            var tag, text;
            c2.forEach(function(chain) {
              tag = chain[0];
              text = chain[2];
              content.push(tag);
              if (text.length > 0) {content.push(text);}
            })
            if (content.length === 0) {return null;}
            return content;
          },
        peg$c76 = /^[^<]/,
        peg$c77 = { type: "class", value: "[^<]", description: "[^<]" },
        peg$c78 = function(text) {
            text = text.join('');
            if (text.length <= 0) {return null;}
            return text;
          },
        peg$c79 = function(s) {
            var text = '';
            s.forEach(function(match){
              text += match[1];
            })
            return text;
          },
        peg$c80 = function(chains) {
            var attrs = {};
            var key, val;
            chains.forEach(function(chain){
              key = chain[0][0];
              val = chain[0][1];
              if (key === 'style') {
                attrs.style = {};
                val.split(';').forEach(function(s){
                  s = s.split(':');
                  if (s.length === 2) {
                    attrs.style[s[0].trim()] = s[1].trim();
                  }
                })
              }
              else if (key === 'class') {
                attrs.class = [];
                val.split(' ').forEach(function(className){
                  className = className.trim();
                  if (className.length > 0) {
                    attrs.class.push(className);
                  }
                })
              }
              else {
                attrs[key] = val;
              }
            })

            if (Object.keys(attrs).length === 0) {return null;}
            return attrs;
          },
        peg$c81 = /^[^ =]/,
        peg$c82 = { type: "class", value: "[^ =]", description: "[^ =]" },
        peg$c83 = function(key, val) {
            return [key.join(''), val];
          },
        peg$c84 = /^[a-zA-Z0-9\-_]/,
        peg$c85 = { type: "class", value: "[a-zA-Z0-9\\-_]", description: "[a-zA-Z0-9\\-_]" },
        peg$c86 = function(key) {
            return [key.join(''), true];
          },
        peg$c87 = "=\"",
        peg$c88 = { type: "literal", value: "=\"", description: "\"=\\\"\"" },
        peg$c89 = /^[^"]/,
        peg$c90 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c91 = "\"",
        peg$c92 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c93 = function(val) {return val.join('').trim();},
        peg$c94 = "='",
        peg$c95 = { type: "literal", value: "='", description: "\"='\"" },
        peg$c96 = /^[^']/,
        peg$c97 = { type: "class", value: "[^']", description: "[^']" },
        peg$c98 = "'",
        peg$c99 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c100 = "=",
        peg$c101 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c102 = "false",
        peg$c103 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c104 = function() {return false;},
        peg$c105 = "true",
        peg$c106 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c107 = function() {return true;},
        peg$c108 = { type: "any", description: "any character" },
        peg$c109 = { type: "other", description: "whitespace" },
        peg$c110 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c111 = { type: "class", value: "[\\t\\x0B\\f \\xA0\\uFEFF]", description: "[\\t\\x0B\\f \\xA0\\uFEFF]" },
        peg$c112 = /^[\n\r\u2028\u2029]/,
        peg$c113 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c114 = { type: "other", description: "end of line" },
        peg$c115 = "\n",
        peg$c116 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c117 = "\r\n",
        peg$c118 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c119 = "\r",
        peg$c120 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c121 = "\u2028",
        peg$c122 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c123 = "\u2029",
        peg$c124 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c125 = { type: "other", description: "comment" },
        peg$c126 = "<!--",
        peg$c127 = { type: "literal", value: "<!--", description: "\"<!--\"" },
        peg$c128 = "-->",
        peg$c129 = { type: "literal", value: "-->", description: "\"-->\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseTags();

      return s0;
    }

    function peg$parseTags() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNotTagContent();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseTag();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c0;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseTag();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse__();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNotTagContent();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c2(s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseTag() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$parseDoctypeTag();
      if (s0 === peg$FAILED) {
        s0 = peg$parseEmptyTag();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 60) {
            s1 = peg$c3;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$currPos;
            peg$silentFails++;
            if (peg$c6.test(input.charAt(peg$currPos))) {
              s3 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c7); }
            }
            peg$silentFails--;
            if (s3 !== peg$FAILED) {
              peg$currPos = s2;
              s2 = peg$c5;
            } else {
              s2 = peg$c0;
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$parse__();
              if (s3 !== peg$FAILED) {
                s4 = [];
                if (peg$c8.test(input.charAt(peg$currPos))) {
                  s5 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c9); }
                }
                if (s5 !== peg$FAILED) {
                  while (s5 !== peg$FAILED) {
                    s4.push(s5);
                    if (peg$c8.test(input.charAt(peg$currPos))) {
                      s5 = input.charAt(peg$currPos);
                      peg$currPos++;
                    } else {
                      s5 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c9); }
                    }
                  }
                } else {
                  s4 = peg$c0;
                }
                if (s4 !== peg$FAILED) {
                  s5 = peg$parseAttributes();
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parse__();
                    if (s6 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 62) {
                        s7 = peg$c10;
                        peg$currPos++;
                      } else {
                        s7 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c11); }
                      }
                      if (s7 !== peg$FAILED) {
                        s8 = peg$parse__();
                        if (s8 !== peg$FAILED) {
                          s9 = peg$parseTagContent();
                          if (s9 !== peg$FAILED) {
                            s10 = peg$parseTagClose();
                            if (s10 !== peg$FAILED) {
                              peg$reportedPos = s0;
                              s1 = peg$c12(s4, s5, s9, s10);
                              s0 = s1;
                            } else {
                              peg$currPos = s0;
                              s0 = peg$c0;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$c0;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$c0;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$parseInvalidEmptyTag();
          }
        }
      }

      return s0;
    }

    function peg$parseInvalidEmptyTag() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 60) {
        s1 = peg$c3;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        if (peg$c6.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        peg$silentFails--;
        if (s3 !== peg$FAILED) {
          peg$currPos = s2;
          s2 = peg$c5;
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            s4 = [];
            if (peg$c8.test(input.charAt(peg$currPos))) {
              s5 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c9); }
            }
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                if (peg$c8.test(input.charAt(peg$currPos))) {
                  s5 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c9); }
                }
              }
            } else {
              s4 = peg$c0;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseAttributes();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse__();
                if (s6 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 62) {
                    s7 = peg$c10;
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c11); }
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse__();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseTagContent();
                      if (s9 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c13(s4, s5, s9);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseDoctypeTag() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c14) {
        s1 = peg$c14;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c15); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        if (peg$c16.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c17); }
        }
        peg$silentFails--;
        if (s3 !== peg$FAILED) {
          peg$currPos = s2;
          s2 = peg$c5;
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          if (peg$c18.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              if (peg$c18.test(input.charAt(peg$currPos))) {
                s4 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c19); }
              }
            }
          } else {
            s3 = peg$c0;
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 62) {
              s4 = peg$c10;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c20(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseTagClose() {
      var s0, s1, s2, s3, s4, s5;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c22) {
        s1 = peg$c22;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c23); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = [];
          if (peg$c8.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              if (peg$c8.test(input.charAt(peg$currPos))) {
                s4 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c9); }
              }
            }
          } else {
            s3 = peg$c0;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 62) {
                s5 = peg$c10;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c24(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }

      return s0;
    }

    function peg$parseEmptyTag() {
      var s0, s1, s2, s3, s4, s5, s6, s7;
